Hack some broken stuff

--- a/88secs.htm
+++ b/88secs.htm
@@ -111,8 +111,8 @@
     <a name="NEW2" id="NEW2"></a><a name="FILM1" id="FILM1"></a>
 
     <div class="c1">
-      <img src="bignew.gif%3E%3CIMG%20SRC=" alt="" />
-    </div><strong><img src="lilnew.gif%20alt=" alt="" />"You shut
+      <img src="bignew.gif" alt="" />
+    </div><strong><img src="lilnew.gif" alt="" />"You shut
     up!"</strong>
 
     <ol>
