--- a/canudig.htm
+++ b/canudig.htm
@@ -142,7 +142,7 @@
   "FILM3"></a><a name="WAR3" id="WAR3"></a>
 
   <div class="c1">
-    <img src="bignew.gif%3E%3CIMG%20SRC=" />
+    <img src="bignew.gif" />
   </div><strong>"Can U Dig It?"</strong>
 
   <ol>
