--- a/coward.htm
+++ b/coward.htm
@@ -32,7 +32,7 @@
 
   <div class="c1">
     <img src="bignew.gif" /><img src="ak.gif" /><img src=
-    "film.gif%3E%3C/CENTER%3E%3Cstrong%3E%3CIMG%20SRC=" alt=
+    "film.gif" alt=
     "(NEW!)" /> The chanting at the very beginning
 
     <ol>
