--- a/dancemad.htm
+++ b/dancemad.htm
@@ -32,7 +32,7 @@ border="0" alt="[Zone]"></a></center>
 <hr>
 <a name="PWSI1" id="PWSI1"></a>
 <center><img src=
-"pwsi.gif%3E%3C/CENTER%3E%3Cstrong%3E%3CIMG%20SRC=" alt="(INFO)">
+"pwsi.gif" alt="(INFO)">
 Contains the same guitar bit that was in '<a href=
 "canudig.htm#">Can U Dig It?</a>' (the part right before "Riffs?
 (Yeah!)", d-k-dannh, d-k-dannh...)<br>
