--- a/defcon1.htm
+++ b/defcon1.htm
@@ -155,7 +155,7 @@
   <a name="NEW3" id="NEW3"></a><a name="MUS4" id="MUS4"></a>
 
   <div class="c1">
-    <img src="bignew.gif%3E%3CIMG%20SRC=" />
+    <img src="bignew.gif" />
   </div><strong>High-pitched melodic line after "Ground floor...
   coming up!"</strong>
 
