--- a/karmadrm.htm
+++ b/karmadrm.htm
@@ -62,7 +62,7 @@
   <div class="c1">
     <img src="bignew.gif" /><img src="ak.gif" /><img src=
     "film.gif" />
-  </div><strong><img src="lilnew.gif%3E" /></strong>
+  </div><strong><img src="lilnew.gif" /></strong>
 
   <ol>
     <li>Spoken by the Colonel in Akira.<br />
@@ -81,7 +81,7 @@
   "FILM3" id="FILM3"></a>
 
   <div class="c1">
-    <img src="bignew.gif" /><img src="ak.gif%3E%3CIMG%20SRC=" />
+    <img src="bignew.gif" /><img src="ak.gif" />
   </div><strong><img src="lilnew.gif" alt="(NEW!)" /> "Okay let's
   do it"</strong>
 
@@ -128,7 +128,7 @@
 
   <div class="c1">
     <img src="bignew.gif" /><img src="ak.gif" /><img src=
-    "film.gif%3E%3C/CENTER%3E%3Cstrong%3E%3CIMG%20SRC=" alt=
+    "film.gif" alt=
     "(NEW!)" /> "Do you hear me?!" (Only on the version from 'Live
     At Weird's...' near the end of Graham's solo, which starts out
     "No solution, constitution...")
