--- a/missile.htm
+++ b/missile.htm
@@ -77,7 +77,7 @@
   <a name="PWSI1" id="PWSI1"></a>
 
   <div class="c1">
-    <img src="pwsi.gif%3E%3C/CENTER%3E%3CSTRONG%3E%3CIMG%20SRC="
+    <img src="pwsi.gif"
     alt="(INFO)" />There are also many references to the Poppies
     earlier singles: `She tried to shoot the Poppies, but the
     POPPIES SAY GRRR..' 'She went to the disco, `cos she wanted to
