--- a/preach.htm
+++ b/preach.htm
@@ -21,7 +21,7 @@ Track: Preaching To The Perverted</h3>
 <hr>
 <hr>
 <a name="PWSI1" id="PWSI1"></a>
-<center><img src="pwsi.gif%3E%3C/CENTER%3E%3CSTRONG%3E">
+<center><img src="pwsi.gif">
 <ol>
 <li>PWEI`s '<a href="ugly.htm">Ugly</a>'<br>
 <strong>[ Andrew Shires - ajsh@cs.warwick.ac.uk ]</strong><br></li>
