--- a/wiseup.htm
+++ b/wiseup.htm
@@ -80,7 +80,7 @@
   is!<br />
   Thanks anyway, guys for keeping us on our toes! _Dave_
   #</cite><br />
-  <strong><img src="lilnew.gif%20alt=" /><img src="info.gif" alt=
+  <strong><img src="lilnew.gif" /><img src="info.gif" alt=
   "(INFO)" /></strong> The expression " Twig the Wonder Kid" refers
   to Twiggy, the 60's fashion model. David Bowie refers to her in
   the lyrics to 'Drive In Saturday' from the 'Aladdin Sane'
