--- a/4letter.htm
+++ b/4letter.htm
@@ -31,7 +31,7 @@
   <a name="PWSI1" id="PWSI1"></a>
 
   <div class="c1">
-    <img src="pwsi.gif%3E%3C/CENTER%3E%3CSTRONG%3E" />
+    <img src="pwsihead.gif" />
 
     <ol>
       <li>from PWEI's 'Radio PWEI'<br /></li>
